# synapseclaw

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  LICENSE-MIT  NOTICE  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tl.md  README.tr.md  (+10 more)
crates/adapters/channels/: Cargo.toml
crates/adapters/channels/src/: bluesky.rs  capabilities.rs  clawdtalk.rs  cli.rs  dingtalk.rs  discord.rs  email_channel.rs  imessage.rs  irc.rs  lark.rs  lib.rs  linq.rs  matrix.rs  mattermost.rs  mochat.rs  nextcloud_talk.rs  nostr.rs  notion.rs  outbound_media.rs  qq.rs  realtime_audio_ingress.rs  realtime_call_ledger.rs  realtime_calls.rs  realtime_turn_engine.rs  reddit.rs  registry.rs  session_backend.rs  session_sqlite.rs  session_store.rs  signal.rs  slack.rs  telegram.rs  traits.rs  transcription.rs  tts.rs  twitter.rs  wati.rs  webhook.rs  wecom.rs  whatsapp.rs  (+1 more)
crates/adapters/core/: Cargo.toml
crates/adapters/core/src/: agent_runtime_factory.rs  channel_runtime_support.rs  commands.rs  inbound_runtime_config.rs  inbound_runtime_ports.rs  inbound_runtime_summary.rs  lib.rs  message_routing_service.rs  runtime_adapter_contract.rs  runtime_history_hygiene.rs  runtime_routes.rs  runtime_system_prompt.rs  runtime_tool_artifacts.rs  runtime_tool_notifications.rs  runtime_tool_observer.rs  scoped_instruction_context.rs
crates/adapters/cron-store/: Cargo.toml
crates/adapters/cron-store/src/: commands.rs  lib.rs  scheduler.rs  store.rs  types.rs
crates/adapters/infra/: Cargo.toml
crates/adapters/infra/src/: config_io.rs  docker.rs  identity.rs  lib.rs  model_catalog_io.rs  native.rs  run_recipe_store.rs  standing_order_store.rs  user_profile_store.rs  workspace_io.rs
crates/adapters/mcp/: Cargo.toml
crates/adapters/mcp/src/: lib.rs  mcp_client.rs  mcp_deferred.rs  mcp_tool.rs  mcp_transport.rs  tool_search.rs
crates/adapters/memory/: Cargo.toml
crates/adapters/memory/src/: embeddings.rs  lib.rs  response_cache.rs  surrealdb_adapter.rs  surrealdb_schema.surql  user_profile_store.rs  vector.rs
crates/adapters/observability/: Cargo.toml
crates/adapters/observability/src/: lib.rs  log.rs  otel.rs  prometheus.rs  runtime_trace.rs  traits.rs  verbose.rs
crates/adapters/onboard/: Cargo.toml
crates/adapters/onboard/src/: lib.rs  wizard.rs
crates/adapters/providers/: Cargo.toml
crates/adapters/providers/src/: anthropic.rs  azure_openai.rs  bedrock.rs  claude_code.rs  compatible.rs  copilot.rs  error_classification.rs  gemini.rs  gemini_cli.rs  glm.rs  kilocli.rs  lib.rs  multimodal.rs  ollama.rs  openai.rs  openai_codex.rs  openrouter.rs  proxy.rs  reliable.rs  router.rs  traits.rs
crates/adapters/tools/: Cargo.toml
crates/adapters/tools/src/: backup_tool.rs  browser.rs  browser_delegate.rs  browser_open.rs  clarify.rs  cloud_ops.rs  cloud_patterns.rs  composio.rs  content_search.rs  core_memory_update.rs  cron_add.rs  cron_facts.rs  cron_list.rs  cron_remove.rs  cron_run.rs  cron_runs.rs  cron_update.rs  data_management.rs  file_edit.rs  file_read.rs  file_write.rs  git_operations.rs  glob_search.rs  google_workspace.rs  http_request.rs  image_info.rs  knowledge_tool.rs  lib.rs  linkedin.rs  linkedin_client.rs  memory_facts.rs  memory_forget.rs  memory_recall.rs  memory_store.rs  message_send.rs  model_routing_config.rs  notion_tool.rs  pdf_read.rs  precedent_search.rs  project_intel.rs  (+19 more)
crates/domain/: Cargo.toml
crates/domain/data/: model_catalog.json
crates/domain/src/: lib.rs
crates/domain/src/config/: adapter_configs.rs  mod.rs  model_catalog.rs  schema.rs
crates/domain/src/domain/: channel.rs  config.rs  conversation_target.rs  dialogue_state.rs  history_projection.rs  ipc.rs  memory.rs  memory_mutation.rs  message.rs  mod.rs  pipeline.rs  pipeline_context.rs  pipeline_event.rs  pipeline_validation.rs  query_classification.rs  routing.rs  run.rs  run_recipe.rs  security_policy.rs  standing_order.rs  tool_fact.rs  tool_repair.rs  turn_admission.rs  turn_defaults.rs  user_profile.rs  util.rs
crates/domain/src/ports/: agent_runner.rs  agent_runtime.rs  channel.rs  channel_output.rs  channel_registry.rs  context_engine.rs  conversation_context.rs  dead_letter.rs  history_compaction_cache.rs  hooks.rs  ipc_client.rs  memory.rs  message_router.rs  mod.rs  model_profile_catalog.rs  pipeline_observer.rs  pipeline_store.rs  provider.rs  realtime_call.rs  route_selection.rs  run_recipe_store.rs  scoped_instruction_context.rs  session_summary.rs  standing_order_store.rs  summary.rs  tool.rs  turn_defaults_context.rs  user_profile_context.rs  user_profile_store.rs
crates/fork_config/: Cargo.toml
crates/fork_config/src/: adapter_configs.rs  channel_traits.rs  lib.rs  schema.rs  security_factory.rs  workload.rs
crates/fork_core/: Cargo.toml
crates/fork_core/src/application/: mod.rs
crates/fork_core/src/domain/: channel.rs  config.rs  conversation.rs  implementation.rs  ipc.rs  memory.rs  message.rs  mod.rs  pipeline.rs  routing.rs  (+9 more)
crates/fork_security/: Cargo.toml
crates/fork_security/src/: audit.rs  bubblewrap.rs  detect.rs  estop.rs  execution.rs  firejail.rs  landlock.rs  lib.rs  nevis.rs  otp.rs  pairing.rs  policy.rs  workspace_boundary.rs
crates/synapse_config/: Cargo.toml
crates/synapse_config/src/: lib.rs  schema.rs  security_factory.rs
crates/synapse_core/: Cargo.toml
crates/synapse_core/src/: bus.rs  lib.rs
crates/synapse_memory/: Cargo.toml
crates/synapse_memory/src/: embeddings.rs  hygiene.rs  lib.rs  postgres.rs  qdrant.rs  snapshot.rs  traits.rs
dev/gateway-chat-harness/: Cargo.toml  README.md
dev/gateway-chat-harness/scripts/: phase4_10_live_pack.sh  phase4_10_targeted_tests.sh
dev/gateway-chat-harness/src/: main.rs
(+1635 files in other folders)
