[workspace]
members = [".", "crates/domain", "crates/adapters/core", "crates/adapters/security", "crates/adapters/memory", "crates/adapters/observability", "crates/adapters/cron-store", "crates/adapters/providers", "crates/adapters/mcp", "crates/adapters/infra", "crates/adapters/channels", "crates/adapters/tools", "crates/adapters/onboard", "dev/gateway-chat-harness"]
resolver = "2"

[patch.crates-io]
livekit = { path = "vendor/livekit-0.7.36" }

[package]
name = "synapseclaw"
version = "0.1.0"
edition = "2021"
authors = ["panviktor"]
license = "MIT OR Apache-2.0"
description = "Multi-agent Rust runtime with IPC broker, web dashboard, and hexagonal core."
repository = "https://github.com/panviktor/synapseclaw"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version = "1.87"

[[bin]]
name = "synapseclaw"
path = "src/main.rs"

[lib]
name = "synapseclaw"
path = "src/lib.rs"

include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
]

[dependencies]
# Fork-owned application core (pure business logic)
synapse_domain = { path = "crates/domain" }
# Fork-owned security module (shared between adapters and main binary)
synapse_security = { path = "crates/adapters/security" }
# Memory backends (sqlite, postgres, qdrant, embeddings)
synapse_memory = { path = "crates/adapters/memory" }
# Infrastructure adapters (channels, providers, tools, gateway, agent)
synapse_adapters = { path = "crates/adapters/core" }
synapse_cron = { path = "crates/adapters/cron-store" }
synapse_providers = { path = "crates/adapters/providers" }
synapse_observability = { path = "crates/adapters/observability" }
synapse_infra = { path = "crates/adapters/infra" }
synapse_onboard = { path = "crates/adapters/onboard" }

# CLI - minimal and fast
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# HTTP client - minimal features
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking", "multipart", "stream", "socks"] }

# Matrix client + E2EE decryption
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown", "sqlite", "experimental-widgets", "experimental-send-custom-to-device", "uniffi"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }


# Config
directories = "6.0"
toml = "1.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Observability - Prometheus metrics (optional; requires AtomicU64, unavailable on 32-bit)
prometheus = { version = "0.14", default-features = false, optional = true }

# Base64 encoding (screenshots, image data)
base64 = "0.22"

# Optional Rust-native browser automation backend
fantoccini = { version = "0.22.1", optional = true, default-features = false, features = ["rustls-tls"] }

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.23", default-features = false, features = ["v4", "std"] }

# HMAC for webhook signature verification
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

# serde-big-array for wa-rs storage (large array serialization)
serde-big-array = { version = "0.5", optional = true }

# Async traits
async-trait = "0.1"


# Protobuf encode/decode (Lark WS frame codec, WhatsApp storage)
prost = { version = "0.14", default-features = false, features = ["derive"], optional = true }

# Memory / persistence
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }

nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"], optional = true }
regex = "1.12"
rustls = "0.23"

opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client", "reqwest-rustls-webpki-roots"], optional = true }

# PDF extraction for datasheet RAG (optional, enable with --features rag-pdf)
pdf-extract = { version = "0.10", optional = true }

# Terminal QR rendering for WhatsApp Web pairing flow.
qrcode = { version = "0.14", optional = true }

# WhatsApp Web client (wa-rs) — optional, enable with --features whatsapp-web
# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }

# Landlock (Linux only) — target-specific to avoid compile failure on macOS
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["observability-prometheus", "channel-nostr", "channel-matrix"]
channel-nostr = ["dep:nostr-sdk", "synapse_domain/channel-nostr", "synapse_adapters/channel-nostr", "synapse_onboard/channel-nostr"]
channel-matrix = ["dep:matrix-sdk", "synapse_adapters/channel-matrix"]
channel-lark = ["dep:prost", "synapse_adapters/channel-lark"]
channel-feishu = ["channel-lark"]
observability-prometheus = ["dep:prometheus", "synapse_adapters/observability-prometheus"]
observability-otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "synapse_adapters/observability-otel"]
browser-native = ["dep:fantoccini", "synapse_adapters/browser-native"]
fantoccini = ["browser-native"]
sandbox-landlock = ["dep:landlock", "synapse_adapters/sandbox-landlock"]
sandbox-bubblewrap = []
landlock = ["sandbox-landlock"]
metrics = ["observability-prometheus"]
rag-pdf = ["dep:pdf-extract", "synapse_adapters/rag-pdf"]
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "dep:serde-big-array", "dep:prost", "dep:qrcode", "synapse_adapters/whatsapp-web"]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 16
strip = true
panic = "abort"

[profile.ci]
inherits = "release"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"
