[package]
name = "synapse_domain"
version = "0.1.0"
edition = "2021"
publish = false

[features]
channel-nostr = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
jsonschema = "0.29"
parking_lot = "0.12"
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = ["sync", "rt", "macros"] }
tracing = { version = "0.1", default-features = false }
url = "2.5"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
