[package]
name = "fork_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
tracing = { version = "0.1", default-features = false }
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
jsonschema = "0.29"
tokio = { version = "1.50", default-features = false, features = ["sync", "rt", "macros"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
