[package]
name = "fork_security"
version = "0.1.0"
edition = "2021"
publish = false

[features]
sandbox-landlock = ["dep:landlock"]

[dependencies]
fork_core = { path = "../fork_core" }
fork_config = { path = "../fork_config" }
anyhow = "1.0"
chacha20poly1305 = "0.10"
hex = "0.4"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
landlock = { version = "0.4", optional = true }
parking_lot = "0.12"
regex = "1.10"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
shellexpand = "3.1"
tokio = { version = "1.50", default-features = false, features = ["fs", "process", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
