[package]
name = "synapse_config"
version = "0.1.0"
edition = "2021"
publish = false

[features]
channel-nostr = []

[dependencies]
synapse_core = { path = "../synapse_core" }
anyhow = "1.0"
directories = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tracing = { version = "0.1", default-features = false }
