[package]
name = "synapse_core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
channel-nostr = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "6"
jsonschema = "0.29"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks"] }
schemars = "1.2"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
shellexpand = "3.1"
tokio = { version = "1.50", default-features = false, features = ["sync", "rt", "macros", "process", "fs"] }
tracing = { version = "0.1", default-features = false }
toml = "0.8"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
