[package]
name = "gateway-chat-harness"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.23", default-features = false, features = ["v4", "std"] }

synapse_domain = { path = "../../crates/domain" }
synapse_infra = { path = "../../crates/adapters/infra" }
