[package]
name = "synapse_adapters"
version = "0.1.0"
edition = "2021"
publish = false

[features]
channel-nostr = ["dep:nostr-sdk", "synapse_domain/channel-nostr", "synapse_channels/channel-nostr", "synapse_onboard/channel-nostr"]
channel-matrix = ["dep:matrix-sdk", "synapse_channels/channel-matrix"]
channel-lark = ["dep:prost", "synapse_channels/channel-lark"]
channel-feishu = ["channel-lark"]
whatsapp-web-channel = ["synapse_channels/whatsapp-web"]
observability-prometheus = ["synapse_observability/observability-prometheus"]
observability-otel = ["synapse_observability/observability-otel"]
whatsapp-web = ["dep:wa-rs", "dep:wa-rs-core", "dep:wa-rs-binary", "dep:wa-rs-proto", "dep:wa-rs-ureq-http", "dep:wa-rs-tokio-transport", "dep:serde-big-array", "dep:prost", "dep:qrcode"]
rag-pdf = ["dep:pdf-extract", "synapse_tools/rag-pdf"]
browser-native = ["dep:fantoccini", "synapse_tools/browser-native"]
sandbox-landlock = ["synapse_security/sandbox-landlock"]
memory-postgres = []

[dependencies]
synapse_domain = { path = "../../domain" }
synapse_security = { path = "../security" }
synapse_memory = { path = "../memory" }
synapse_observability = { path = "../observability" }
synapse_cron = { path = "../cron-store" }
synapse_providers = { path = "../providers" }
synapse_mcp = { path = "../mcp" }
synapse_infra = { path = "../infra" }
synapse_channels = { path = "../channels" }
synapse_tools = { path = "../tools" }
synapse_onboard = { path = "../onboard" }

# Major frameworks
axum = { version = "0.8", features = ["multipart", "ws", "macros"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ignored = "0.1"
serde_yaml = "0.9"
toml = "1.0"

# Async
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", default-features = false }

# Logging/tracing
tracing = "0.1"

# Common utilities
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = "0.10"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
regex = "1.10"
parking_lot = "0.12"
directories = "6"
shellexpand = "3.1"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
rust-embed = { version = "8.4", features = ["interpolate-folder-path"] }
base64 = "0.22"
url = "2.5"
percent-encoding = "2.3"
urlencoding = "2.1"
thiserror = "2.0"
glob = "0.3"
which = "8.0"
hostname = "0.4.2"
nanohtml2text = "0.2"
mime_guess = "2"

# Crypto
hmac = "0.12"
sha2 = "0.10"
ring = "0.17"
hex = "0.4"
rand = "0.10"
chacha20poly1305 = "0.10"

# HTTP/TLS
rustls = { version = "0.23", features = ["ring", "std", "logging", "tls12"] }
rustls-pki-types = "1"
tokio-rustls = "0.26"
http = "1"
http-body-util = "0.1"
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "compression-gzip"] }
webpki-roots = "1.0.6"

# Email
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.9"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Schema validation
jsonschema = "0.29"

# Cron/scheduling
cron = "0.15"

# Filesystem
notify = "8"
tempfile = "3.15"

# Platform channels (optional)
nostr-sdk = { version = "0.44", default-features = false, features = ["nip04", "nip59"], optional = true }
prost = { version = "0.13", optional = true }

# Portable atomics
portable-atomic = "1"

# Optional channel/feature deps
matrix-sdk = { version = "0.16", optional = true, default-features = false, features = ["e2e-encryption", "rustls-tls", "markdown", "sqlite"] }
fantoccini = { version = "0.22.1", optional = true, default-features = false, features = ["rustls-tls"] }
pdf-extract = { version = "0.10", optional = true }
wa-rs = { version = "0.2", optional = true, default-features = false }
wa-rs-core = { version = "0.2", optional = true, default-features = false }
wa-rs-binary = { version = "0.2", optional = true, default-features = false }
wa-rs-proto = { version = "0.2", optional = true, default-features = false }
wa-rs-ureq-http = { version = "0.2", optional = true }
wa-rs-tokio-transport = { version = "0.2", optional = true, default-features = false }
serde-big-array = { version = "0.5", optional = true }
qrcode = { version = "0.14", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.15"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "test-util"] }

