[package]
name = "synapse_cron"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
synapse_domain = { path = "../../domain" }
synapse_security = { path = "../security" }

anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
cron = "0.15"
futures-util = "0.3"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19"
tokio = { version = "1.50", features = ["rt", "time", "process", "sync", "io-util", "macros"] }
tracing = "0.1"
uuid = { version = "1.22", features = ["v4"] }
which = "7.0"
