[package]
name = "synapse_infra"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
synapse_domain = { path = "../../domain" }
synapse_security = { path = "../security" }
synapse_providers = { path = "../providers" }

anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
directories = "6"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
shellexpand = "3.1"
tokio = { version = "1.50", default-features = false, features = ["fs", "sync", "io-util"] }
toml = "1.0"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_ignored = "0.1"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tempfile = "3.15"
