[package]
name = "synapse_memory"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
synapse_domain = { path = "../../domain" }
synapse_providers = { path = "../providers" }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
hex = "0.4"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1.0"
sha2 = "0.11"
surrealdb = { version = "3.0", default-features = false, features = ["kv-surrealkv"] }
tokio = { version = "1.50", default-features = false, features = ["fs", "sync", "time", "rt"] }
tracing = "0.1"
uuid = { version = "1.23", default-features = false, features = ["v4", "std"] }

[dev-dependencies]
tempfile = "3.27"
