[package]
name = "synapse_providers"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
synapse_domain = { path = "../../domain" }
synapse_security = { path = "../security" }

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
directories = "6"
futures-util = "0.3"
hmac = "0.13"
parking_lot = "0.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking", "multipart", "stream", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.50", features = ["rt", "time", "sync", "macros"] }
tracing = "0.1"
uuid = { version = "1.23", features = ["v4"] }
chacha20poly1305 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tempfile = "3.27"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "time", "net"] }
